feat: database manager and refactor resource ui